jag skapade knappar.

--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -8,7 +8,30 @@
 <body>
     <h1>Julkalendern</h1>
     <div>
-        stuff
+        <button type="button">1;a dagen</button>
+        <button type="button">2;a dagen</button>
+        <button type="button">3;e dagen</button>
+        <button type="button">4;e dagen</button>
+        <button type="button">5;e dagen</button>
+        <button type="button">6;e dagen</button>
+        <button type="button">7;e dagen</button>
+        <button type="button">8;e dagen</button>
+        <button type="button">9;e dagen</button>
+        <button type="button">10;e dagen</button>
+        <button type="button">11;e dagen</button>
+        <button type="button">12;e dagen</button>
+        <button type="button">13;e dagen</button>
+        <button type="button">14;e dagen</button>
+        <button type="button">15;e dagen</button>
+        <button type="button">16;e dagen</button>
+        <button type="button">17;e dagen</button>
+        <button type="button">18;e dagen</button>
+        <button type="button">19;e dagen</button>
+        <button type="button">20;e dagen</button>
+        <button type="button">21;a dagen</button>
+        <button type="button">22;a dagen</button>
+        <button type="button">23;e dagen</button>
+        <button type="button">24;e dagen</button>
     </div>
 </body>
 </html>
