skapade lite js för att meka med luckorna

--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -4,9 +4,11 @@
     <title>Julkalender</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Julkalender.css">
+    
 </head>
 <body>
     <h1>Julkalendern</h1>
+    <script src="js/projekt-1Jul.JS"></script>
     <div>
         <button type="button">1;a dagen</button>
         <button type="button">2;a dagen</button>
