--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -9,31 +9,53 @@
 <body>
     <h1>Julkalendern</h1>
     <script src="js/projekt-1Jul.JS"></script>
-    <div>
-        <button type="button">1;a dagen</button>
-        <button type="button">2;a dagen</button>
-        <button type="button">3;e dagen</button>
-        <button type="button">4;e dagen</button>
-        <button type="button">5;e dagen</button>
-        <button type="button">6;e dagen</button>
-        <button type="button">7;e dagen</button>
-        <button type="button">8;e dagen</button>
-        <button type="button">9;e dagen</button>
-        <button type="button">10;e dagen</button>
-        <button type="button">11;e dagen</button>
-        <button type="button">12;e dagen</button>
-        <button type="button">13;e dagen</button>
-        <button type="button">14;e dagen</button>
-        <button type="button">15;e dagen</button>
-        <button type="button">16;e dagen</button>
-        <button type="button">17;e dagen</button>
-        <button type="button">18;e dagen</button>
-        <button type="button">19;e dagen</button>
-        <button type="button">20;e dagen</button>
-        <button type="button">21;a dagen</button>
-        <button type="button">22;a dagen</button>
-        <button type="button">23;e dagen</button>
-        <button type="button">24;e dagen</button>
+    <div class="1">        
+    </div>
+    <div class="2">        
+    </div>
+    <div class="3">        
+    </div>
+    <div class="4">        
+    </div>
+    <div class="5">        
+    </div>
+    <div class="6">        
+    </div>
+    <div class="7">        
+    </div>
+    <div class="8">        
+    </div>
+    <div class="9">        
+    </div>
+    <div class="10">        
+    </div>
+    <div class="11">        
+    </div>
+    <div class="12">        
+    </div>
+    <div class="13">        
+    </div>
+    <div class="14">        
+    </div>
+    <div class="15">        
+    </div>
+    <div class="16">        
+    </div>
+    <div class="17">        
+    </div>
+    <div class="18">        
+    </div>
+    <div class="19">        
+    </div>
+    <div class="20">        
+    </div>
+    <div class="21">        
+    </div>
+    <div class="22">        
+    </div>
+    <div class="23">        
+    </div>
+    <div class="24">        
     </div>
 </body>
 </html>
