--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -9,53 +9,29 @@
 <body>
     <h1>Julkalendern</h1>
     <script src="js/projekt-1Jul.JS"></script>
-    <div class="1">        
-    </div>
-    <div class="2">        
-    </div>
-    <div class="3">        
-    </div>
-    <div class="4">        
-    </div>
-    <div class="5">        
-    </div>
-    <div class="6">        
-    </div>
-    <div class="7">        
-    </div>
-    <div class="8">        
-    </div>
-    <div class="9">        
-    </div>
-    <div class="10">        
-    </div>
-    <div class="11">        
-    </div>
-    <div class="12">        
-    </div>
-    <div class="13">        
-    </div>
-    <div class="14">        
-    </div>
-    <div class="15">        
-    </div>
-    <div class="16">        
-    </div>
-    <div class="17">        
-    </div>
-    <div class="18">        
-    </div>
-    <div class="19">        
-    </div>
-    <div class="20">        
-    </div>
-    <div class="21">        
-    </div>
-    <div class="22">        
-    </div>
-    <div class="23">        
-    </div>
-    <div class="24">        
-    </div>
+    <div class="cal">1</div>
+    <div class="cal">2</div>
+    <div class="cal">3</div> 
+    <div class="cal">4</div>
+    <div class="cal">5</div>
+    <div class="cal">6</div>
+    <div class="cal">7</div>
+    <div class="cal">8</div>
+    <div class="cal">9</div>
+    <div class="cal">10</div>
+    <div class="cal">11</div>
+    <div class="cal">12</div>
+    <div class="cal">13</div>
+    <div class="cal">14</div>
+    <div class="cal">15</div>
+    <div class="cal">16</div>
+    <div class="cal">17</div>
+    <div class="cal">18</div>  
+    <div class="cal">19</div>  
+    <div class="cal">20</div>
+    <div class="cal">21</div>
+    <div class="cal">22</div>
+    <div class="cal">23</div>
+    <div class="cal">24</div>
 </body>
 </html>
