--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -14,6 +14,8 @@
                 var text = document.getElementById("inp").value;
                 if (X === "red"){
                     document.getElementById("header").style.color = "red";
+                }else if (X === "purple"){
+                    document.getElementById("header").style.color = "purple"; 
                 }else{
                     document.getElementById("header").style.color = "brown";
                 }
