--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -17,15 +17,17 @@
         <script>
             function pressed(){
                 var text = document.getElementById("inp").value;
-                if (text === "red"){
-                    document.getElementById("header").style.color = "red";
-                }else if (text === "purple"){
-                    document.getElementById("header").style.color = "purple"; 
-                }else{
-                    document.getElementById("header").style.color = "brown";
+                switch (text){
+                    case "red":
+                        document.getElementById("header").style.color = "red";
+                    break;
+                    case "purple":
+                        document.getElementById("header").style.color = "purple"; 
+                    default
+                        document.getElementById("header").style.color = "brown";
+                    break;
                 }
             }
         </script>
-
     </body>
 </html>
