--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -13,6 +13,29 @@
         <h1>Julkalendern</h1>
         <input type="text" id="inp"/>
         <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
+        <button onclick="pressed()">tryck</button>
         <div id="header">boi</div>
         <script>
             function pressed(){
