--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Julkalendern</h1>
-        <input type="text" id="inp"/>
+        <input type="image" id="inp"/>
         <button onclick="pressed()">tryck</button>
         <button onclick="pressed()">tryck</button>
         <button onclick="pressed()">tryck</button>
@@ -39,14 +39,14 @@
         <div id="header">boi</div>
         <script>
             function pressed(){
-                var text = document.getElementById("inp").value;
-                switch (text){
+                var image = document.getElementById("inp").value;
+                switch (Image){
                     case "red":
                         document.getElementById("header").style.color = "red";
                     break;
                     case "purple":
                         document.getElementById("header").style.color = "purple"; 
-                    default
+                    default:
                         document.getElementById("header").style.color = "brown";
                     break;
                 }
