--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -42,12 +42,12 @@
                 var image = document.getElementById("inp").value;
                 switch (Image){
                     case "red":
-                        document.getElementById("header").style.color = "red";
+                        document.getElementById("header").image = "red";
                     break;
                     case "purple":
-                        document.getElementById("header").style.color = "purple"; 
+                        document.getElementById("header").image = "purple"; 
                     default:
-                        document.getElementById("header").style.color = "brown";
+                        document.getElementById("header").image = "brown";
                     break;
                 }
             }
