--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -3,54 +3,329 @@
     <head>
         <title>Julkalender</title>
         <meta charset="utf-8">
-        <label for="start">Start date:</label>
 
-        <input type="date" id="start" name="trip-start"
-            value="20XX-12-01"
-            min="20XX-01-01" max="20XX-12-31">
     </head>
     <body>
         <h1>Julkalendern</h1>
-        <input type="image" id="inp"/>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
-        <button onclick="pressed()">tryck</button>
+        <input type="text" id="inp"/>
+        <button onclick="pressed1()">tryck</button>
+        <button onclick="pressed2()">tryck</button>
+        <button onclick="pressed3()">tryck</button>
+        <button onclick="pressed4()">tryck</button>
+        <button onclick="pressed5()">tryck</button>
+        <button onclick="pressed6()">tryck</button>
+        <button onclick="pressed7()">tryck</button>
+        <button onclick="pressed8()">tryck</button>
+        <button onclick="pressed9()">tryck</button>
+        <button onclick="pressed10()">tryck</button>
+        <button onclick="pressed11()">tryck</button>
+        <button onclick="pressed12()">tryck</button>
+        <button onclick="pressed13()">tryck</button>
+        <button onclick="pressed14()">tryck</button>
+        <button onclick="pressed15()">tryck</button>
+        <button onclick="pressed16()">tryck</button>
+        <button onclick="pressed17()">tryck</button>
+        <button onclick="pressed18()">tryck</button>
+        <button onclick="pressed19()">tryck</button>
+        <button onclick="pressed20()">tryck</button>
+        <button onclick="pressed21()">tryck</button>
+        <button onclick="pressed22()">tryck</button>
+        <button onclick="pressed23()">tryck</button>
+        <button onclick="pressed24()">tryck</button>
+        <div id="current_date"></p>
+        <script>
+            document.getElementById("current_date").innerHTML = Date();
+        </script> 
         <div id="header">boi</div>
         <script>
-            function pressed(){
-                var image = document.getElementById("inp").value;
-                switch (Image){
-                    case "red":
-                        document.getElementById("header").image = "red";
+            function pressed1(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
                     break;
-                    case "purple":
-                        document.getElementById("header").image = "purple"; 
                     default:
                         document.getElementById("header").image = "brown";
                     break;
                 }
             }
-        </script>
+            function pressed2(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed3(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed4(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed5(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed6(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed7(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }    
+            function pressed8(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed9(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed10(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed11(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed12(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed13(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed14(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed15(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed16(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed17(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed18(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed19(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed20(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed21(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed22(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed23(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+            function pressed24(){
+                var text = document.getElementById("inp").value;
+                console.log("inp")
+                switch (text){
+                    case "tomteluva.png":
+                        document.getElementById("header").image = image("tomteluva.png");
+                    break;
+                    default:
+                        document.getElementById("header").image = "brown";
+                    break;
+                }
+            }  
+        </script>   
     </body>
 </html>
