--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -8,30 +8,30 @@
     <body>
         <h1>Julkalendern</h1>
         <input type="text" id="inp"/>
-        <button onclick="pressed1()">tryck</button>
-        <button onclick="pressed2()">tryck</button>
-        <button onclick="pressed3()">tryck</button>
-        <button onclick="pressed4()">tryck</button>
-        <button onclick="pressed5()">tryck</button>
-        <button onclick="pressed6()">tryck</button>
-        <button onclick="pressed7()">tryck</button>
-        <button onclick="pressed8()">tryck</button>
-        <button onclick="pressed9()">tryck</button>
-        <button onclick="pressed10()">tryck</button>
-        <button onclick="pressed11()">tryck</button>
-        <button onclick="pressed12()">tryck</button>
-        <button onclick="pressed13()">tryck</button>
-        <button onclick="pressed14()">tryck</button>
-        <button onclick="pressed15()">tryck</button>
-        <button onclick="pressed16()">tryck</button>
-        <button onclick="pressed17()">tryck</button>
-        <button onclick="pressed18()">tryck</button>
-        <button onclick="pressed19()">tryck</button>
-        <button onclick="pressed20()">tryck</button>
-        <button onclick="pressed21()">tryck</button>
-        <button onclick="pressed22()">tryck</button>
-        <button onclick="pressed23()">tryck</button>
-        <button onclick="pressed24()">tryck</button>
+        <button onclick="pressed1()">1</button>
+        <button onclick="pressed2()">2</button>
+        <button onclick="pressed3()">3</button>
+        <button onclick="pressed4()">4</button>
+        <button onclick="pressed5()">5</button>
+        <button onclick="pressed6()">6</button>
+        <button onclick="pressed7()">7</button>
+        <button onclick="pressed8()">8</button>
+        <button onclick="pressed9()">9</button>
+        <button onclick="pressed10()">10</button>
+        <button onclick="pressed11()">11</button>
+        <button onclick="pressed12()">12</button>
+        <button onclick="pressed13()">13</button>
+        <button onclick="pressed14()">14</button>
+        <button onclick="pressed15()">15</button>
+        <button onclick="pressed16()">16</button>
+        <button onclick="pressed17()">17</button>
+        <button onclick="pressed18()">18</button>
+        <button onclick="pressed19()">19</button>
+        <button onclick="pressed20()">20</button>
+        <button onclick="pressed21()">21</button>
+        <button onclick="pressed22()">22</button>
+        <button onclick="pressed23()">23</button>
+        <button onclick="pressed24()">24</button>
         <div id="current_date"></p>
         <script>
             document.getElementById("current_date").innerHTML = Date();
